test: green | RegisterValidationProductUseCaseTest